--- a/USAID.MapCODLocationsPreviewer/Views/Home/Index.cshtml
+++ b/USAID.MapCODLocationsPreviewer/Views/Home/Index.cshtml
@@ -22,7 +22,8 @@
             <div class="btnprofile">
                 <img class="btnimage" style="margin: 0px; padding:4px 5px 0px 14px;" src='@Url.Content("~/Content/Images/i1.png")' alt="COD Map Previewer template: UGA CVIOG ITOS supports COD development and Information Management initiatives for UN OCHA and other humanitarian groups involved in preparedness and response." />
                 <div class="btnprofile-content">
-                    <a href="https://humanitarian.atlassian.net/wiki/spaces/imtoolbox/pages/42045911/COD+Overview" target="_blank">UN OCHA Wiki on CODs</a>
+                    <a href="https://humanitarian.atlassian.net/wiki/spaces/imtoolbox/pages/42045911/COD+Overview" target="_blank">UN OCHA Wiki on CODs</a><br>
+					<a href="https://github.com/UGA-ITOSHumanitarianGIS/mapservicedoc/raw/master/Doc/CODLocPreviewer.mp4" target="_blank">A video showing this in action</a>
                 </div>
             </div>
             <!--<a title="Maps and information for Surveys and Occurrence reviews may be accessed and managed here.">
